--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@ p {
   justify-content: space-between;
   align-items: center;
   width: 85%;
-  max-width: 600px;
+  max-width: 400px;
   padding: 1rem;
   border-radius: 10px;
 }
@@ -60,7 +60,7 @@ p {
 /* Main */
 .main {
   width: 85%;
-  max-width: 600px;
+  max-width: 400px;
   padding: 1rem;
   background-color: var(--Very-pale-orange);
   border-radius: 10px;
@@ -80,6 +80,7 @@ p {
 
 .main_charts_barContent {
   width: 14%;
+  cursor: pointer;
 }
 
 .main_charts_amount {
@@ -87,21 +88,33 @@ p {
   color: var(--Very-pale-orange);
   background-color: var(--Dark-brown);
   border-radius: 5px;
-  padding: 0.1rem;
+  padding: 0.3rem;
   margin-bottom: 0.5rem;
-  display: none;
+  visibility: hidden;
+  text-align: center;
+}
+
+.main_charts_barContent:hover .main_charts_amount {
+  visibility: visible;
 }
 
 .main_charts_bar {
   background-color: var(--Soft-red);
   border-radius: 5px;
-}
-.main_charts_barHigher {
-  background-color: var(--Cyan);
+  width: 70%;
+  margin: 0 auto;
 }
 
 .main_charts_bar:hover {
   background-color: hsl(10, 79%, 75%);
+}
+
+.main_charts_barHigher {
+  background-color: var(--Cyan);
+}
+
+.main_charts_barHigher:hover {
+  background-color: hsl(186, 34%, 75%);
 }
 
 .main_charts_day {
@@ -138,6 +151,8 @@ p {
 .attribution {
   font-size: 11px;
   text-align: center;
+  position: absolute;
+  bottom: 0.5rem;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
